Fri Mar 11 16:11:27 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode/case-folding.rb, casefold.h: Streamlining approach to
	  case mapping data not available from case folding by unifying all
	  three cases (special title, special upper, special lower).
	* enc/unicode.c: Adjust macro names for above (macros are currently inactive).
	  (with Kimihito Matsui)

Thu Mar 10 17:34:16 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* iseq.c (prepare_iseq_build): enable coverage by coverage_enabled
	  option, not by parse_in_eval flag in the thread context.

	* iseq.h (rb_compile_option_struct): add coverage_enabled flag.

	* parse.y (yycompile0): set coverage_enabled flag if coverage
	  array is made.

Thu Mar 10 15:19:54 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* node.c (dump_option): nd_compile_option is a hidden hash object,
	  cannot call inspect on it.

Thu Mar 10 09:49:54 2016  Rei Odaira  <Rei.Odaira@gmail.com>

	* test/socket/test_socket.rb (test_udp_recvmsg_truncation):
	  AIX does not set the MSG_TRUNC flag for a message partially read
	  by recvmsg(2) with the MSG_PEEK flag set.

Wed Mar  9 16:48:45 2016  Koichi Sasada  <ko1@atdot.net>

	* benchmark/driver.rb: fix my last commit (syntax error).

Wed Mar  9 16:41:44 2016  Koichi Sasada  <ko1@atdot.net>

	* benchmark/driver.rb: fix output messages.

	* benchmark/memory_wrapper.rb: use respond_to? because
	  member? does not work well.

Wed Mar  9 16:20:25 2016  Koichi Sasada  <ko1@atdot.net>

	* benchmark/driver.rb: support memory usage benchmark.
	  use `--measure-target=[target]'.
	  Now, we can use the following targets:
	    * real (default): real time which returns process time in sec.
	    * peak: peak memory usage (physical memory) in bytes.
	    * size: last memory usage (physical memory) in bytes.

	* benchmark/memory_wrapper.rb: ditto.

Wed Mar  9 15:04:22 2016  Koichi Sasada  <ko1@atdot.net>

	* benchmark/bm_vm3_gc_old_full.rb: add GC.start benchmark.
